added the 2nd blog

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,14 @@
-p{
-    background-color: black;
+img{
+    border-radius: 10%;
+    /* margin-left: 2%; */
+    /* margin-top: 2%; */
+    margin: 1%;
+   
+}
+a{
+    text-decoration: none;
+    font-family: 'Franklin Gothic Medium';
+    font-size: 20px;
+
+    
 }
